--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -338,6 +338,10 @@ body {
   }
 }
 .orders-show-page {
+  .payment-buttons, .receive-button {
+    margin-top: 10px;
+    padding-right: 10px;
+  }
   .payment-buttons {
     margin-top: 10px;
     padding-right: 10px;
