--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -338,7 +338,7 @@ body {
   }
 }
 .orders-show-page {
-  .payment-buttons, .receive-button {
+  .payment-buttons, .receive-button, .refund-button {
     margin-top: 10px;
     padding-right: 10px;
   }
